--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <p>London, United Kingdom</p>
     </div>
     <p> "Front-end developer and avid reader."</p>
-    <div class="profil-infos">
+    <div class="links-infos">
       <button>GitHub</button>
       <button>Frontend mentor</button>
       <button>Linkedin</button>
@@ -33,26 +33,14 @@
       <button>Instagram</button>
     </div>
   </div>
-
-
-
-
-
-
-  <!-- 
-  
- 
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram -->
-
-  <!-- <div class="attribution">
+<footer>
+<div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="">Bintou KARAMOKO</a>.
-  </div> -->
+    </div>
+</footer>
+
+
 </body>
 
 </html>
