--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     </div>
     <p> "Front-end developer and avid reader."</p>
     <div class="links-infos">
-      <button>GitHub</button>
-      <button>Frontend mentor</button>
-      <button>Linkedin</button>
-      <button>Twitter</button>
-      <button>Instagram</button>
+      <button><a href="#">GitHub</a></button>
+      <button><a href="#">Frontend mentor</a></button>
+      <button><a href="#">Linkedin</a></button>
+      <button><a href="#">Twitter</a></button>
+      <button><a href="#">Instagram</a></button>
     </div>
   </div>
 <footer>
